# damp-active-search

./: .gitignore  README.md
Arduino/libraries/ros_lib/: VS_WRC021Hardware.h  ros.h  vs_wrc021_ros.h
Arduino/libraries/ros_lib/ar_pose/: ARMarker.h  ARMarkers.h
Arduino/libraries/ros_lib/cartographer_ros_msgs/: FinishTrajectory.h  LandmarkEntry.h  LandmarkList.h  SensorTopics.h  StartTrajectory.h  StatusCode.h  StatusResponse.h  SubmapEntry.h  SubmapList.h  SubmapQuery.h  SubmapTexture.h  TrajectoryOptions.h  WriteState.h
Arduino/libraries/vs_wrc058_fwdsrover/: library.properties
Arduino/libraries/vs_wrc058_fwdsrover/src/: vs_wrc058_ble_pad.cpp  vs_wrc058_ble_pad.h  (+20 more)
docker/: Dockerfile
foxy_ws/src/acoustic_belief/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_bridge/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_io/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_io/src/: acoustic.cpp
foxy_ws/src/acoustic_msgs/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_navigation/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_perception/: CMakeLists.txt  package.xml
foxy_ws/src/acoustic_sim/: CMakeLists.txt  package.xml
model/C++/: damp.cpp
model/weights/: dampnet.pth
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/acoustic_msgs/: CMakeLists.txt
ros2_ws/src/acoustic_nav_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/acoustic_navigation/: CMakeLists.txt
ros2_ws/src/acoustic_perception/: CMakeLists.txt
ros2_ws/src/active_search/: CMakeLists.txt
ros2_ws/src/belief_mapping/: CMakeLists.txt
(+42 files in other folders)
